applied fix for spacing and resize issue

--- a/index.scss
+++ b/index.scss
@@ -65,12 +65,15 @@ section.pic-bio {
     border-radius: 1.5vh;
     border-radius: calc(var(--vh, 1vh) * 1.5);
     height: 100%;
-    // width: 45%;
+    // width: 49%;
     // margin-right: 8vw;
   }
   .bio {
     height: 100%;
     justify-content: space-between;
+    width: 49%;
+    padding-left: 10%;
+
     // margin: 0 auto;
     .age {
       width: 100%;
